# twitch-py

./: .gitignore  LICENSE.txt  README.md  install  install.sh  noxfile.py  pyproject.toml  requirements.txt
src/: main.py
src/static/: style.css
src/views/: authenticate.tpl  base.tpl  channel.tpl  error_page.tpl  index.tpl  search.tpl  settings.tpl  top.tpl
twitch-py/config/: settings.toml  style.css
twitch-py/views/: channel.tpl  index.tpl
twitch_py/: main.py
twitch_py/config/: settings.toml  style.css
twitch_py/views/: authenticate.tpl  base.tpl  channel.tpl  error_page.tpl  following.tpl  index.tpl  search.tpl  settings.tpl  top.tpl
