[tool.poetry]
name = "twitch_py"
version = "0.1.0"
description = "Frontend for launching Twitch streams/vods from user account preferences"
authors = ["RaeedAhmed <ruahmed7868@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/raeedahmed/twitch-py"

[tool.poetry.dependencies]
python = "^3.9"
httpx = "^0.17.1"
bottle = "^0.12.19"
peewee = "^3.14.4"
toml = "^0.10.2"
waitress = "^2.0.0"
streamlink = "^2.1.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.9.0"
isort = "^5.8.0"
ipython = "^7.21.0"
nox = "^2020.12.31"
Nuitka = "^0.6.13"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 99

[tool.isort]
profile = 'black'
